--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,10 +38,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        python -m pytest
+#     - name: Test with pytest
+#       run: |
+#         pip install pytest
+#         python -m pytest
         
     - name: Run shell script to install models from OSF
       run: |
