--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,7 +36,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install .
+# pip install -r requirements.txt
+# pip install git+git://github.com/${{ github.repository }}.git@${{ github.sha }}
+
 
 #     - name: Test with pytest
 #       run: |
@@ -49,5 +52,4 @@ jobs:
         
     - name: Run functional tests
       run: |
-        pip install git+git://github.com/${{ github.repository }}.git@${{ github.sha }}
-        python tests/test.py
+        python ./tests/test.py
