--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,6 +34,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
         
     - name: Install dependencies
+      env: |
+        MESONET_GIT: pwd
       run: |
         python -m pip install --upgrade pip
         python -m pip install .
