--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,8 +35,8 @@ jobs:
         
     - name: Sets environment variable for git repo location
       env:
-        MESONET_GIT: ${{ env.PWD }}
-      run: echo "The MesoNet git repository is located at ${{ env.PWD }}"
+        MESONET_GIT: ${{ env.GITHUB_WORKSPACE }}
+      run: echo "The MesoNet git repository is located at ${{ env.MESONET_GIT }}"
         
     - name: Install dependencies
       run: |
