--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,15 +42,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install --upgrade tensorflow
         python -m pip install .
-# pip install -r requirements.txt
-# pip install git+git://github.com/${{ github.repository }}.git@${{ github.sha }}
-
-
-#     - name: Test with pytest
-#       run: |
-#         pip install pytest
-#         python -m pytest
         
     - name: Run shell script to install models from OSF
       working-directory: ./mesonet
